--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: stablelearner
-Version: 0.1-3
-Date: 2021-01-08
+Version: 0.1-4
+Date: 2022-03-18
 Title: Stability Assessment of Statistical Learning Methods
-Authors@R: c(person(given = "Michel",  family = "Philipp",     role = c("aut", "cre"), email = "michel.philipp.mp@gmail.com"),
+Authors@R: c(person(given = "Michel",  family = "Philipp",     role = "aut",           email = "michel.philipp.mp@gmail.com"),
              person(given = "Carolin", family = "Strobl",      role = "aut",           email = "Carolin.Strobl@psychologie.uzh.ch"),
              person(given = "Achim",   family = "Zeileis",     role = "aut",           email = "Achim.Zeileis@R-project.org", comment = c(ORCID = "0000-0003-0918-3766")),
-             person(given = "Thomas",  family = "Rusch",       role = "aut",           email = "Thomas.Rusch@wu.ac.at"),
+             person(given = "Thomas",  family = "Rusch",       role = c("aut", "cre"), email = "Thomas.Rusch@wu.ac.at"),
              person(given = "Kurt",    family = "Hornik",      role = "aut",           email = "Kurt.Hornik@wu.ac.at", comment = c(ORCID = "0000-0003-4198-9911")),
              person(given = "Lennart", family = "Schneider",   role = "aut",           email = "Lennart.Sch@web.de", comment = c(ORCID = "0000-0003-4152-5308")))
 Description: Graphical and computational methods that can be used to assess the 
