--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -82,8 +82,6 @@ S3method("print", "summary.stablelearnerList")
 S3method("boxplot", "stablelearnerList")
 
 S3method("as.stabletree", "randomForest")
+S3method("as.stabletree", "RandomForest")
 S3method("as.stabletree", "cforest")
 S3method("as.stabletree", "ranger")
-
-exportMethods(as.stabletree)
-
